--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>i ma just launch my third web site for git hub hosting </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel earum debitis eos ratione ab nisi tempore, eaque facere vero, dolores ipsum, dicta minima enim deserunt.</p>
     <h2>this will be another tutorial practice</h2>
+    <h3>safwan is a good boy</h3>
+    <p>safwan study hard to do good result in the school, as well he is improving his behaviour </p>
 </body>
 </html>
