--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h2>this will be another tutorial practice</h2>
     <h3>safwan is a good boy</h3>
     <p>safwan study hard to do good result in the school, as well he is improving his behaviour </p>
-    <img src="funny.jpg" alt="">
+    <img src="funny.jpg" class="moja">
 </body>
 </html>
