--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel earum debitis eos ratione ab nisi tempore, eaque facere vero, dolores ipsum, dicta minima enim deserunt.</p>
     <h2>this will be another tutorial practice</h2>
     <h3>safwan is a good boy</h3>
-    <p>safwan study hard to do good result in the school, as well he is improving his behaviour </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe modi ullam adipisci error deleniti. Excepturi mollitia dignissimos velit, iusto consequatur eum, incidunt, nisi consectetur aut a similique voluptate explicabo. Laborum illo sequi impedit ducimus! Minus, pariatur. Harum fugiat, qui ad non, vitae dolorum nostrum repudiandae repellat at quidem debitis. </p>
     <img src="funny.jpg" class="moja">
 </body>
 </html>
